Fix alignment RTL

--- a/openassessment/xblock/static/sass/oa/views/_oa-base.scss
+++ b/openassessment/xblock/static/sass/oa/views/_oa-base.scss
@@ -99,6 +99,11 @@
       width: 100%;
       margin-bottom: 0;
 
+      button.ui-slidable {
+        @include text-align(left);
+        display:flex;
+      }
+
       .step__counter, .wrapper--copy {
         display: inline-block;
         vertical-align: middle;
@@ -181,27 +186,32 @@
     // step status
     .step__status {
       display: inline;
-      margin-top: ($baseline-v/4);
+      position: absolute;
+      @include right(20px)
+      top:-1px;
 
       @include media($bp-dm) {
         margin-top: 0;
         @include float(right);
-        position: relative;
-        top: -($baseline-v) - 12;
+        position: absolute;
+        @include right(20px)
+        top:-1px;
       }
 
       @include media($bp-dl) {
         margin-top: 0;
         @include float(right);
-        position: relative;
-        top: -($baseline-v) - 12;
+        position: absolute;
+        @include right(20px)
+        top:-1px;
       }
 
       @include media($bp-dx) {
         margin-top: 0;
         @include float(right);
-        position: relative;
-        top: -($baseline-v) - 12;
+        position: absolute;
+        @include right(20px)
+        top:-1px;
       }
 
       .step__status__value {
@@ -501,7 +511,7 @@
       }
 
       .wrapper--copy {
-        text-align: left;
+        @include text-align(left);
       }
     }
   }
